--- a/tsconfig.api.json
+++ b/tsconfig.api.json
@@ -1,6 +1,11 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "types": ["vite/client"]
+    "target": "ES2022",
+    "lib": ["ES2022", "DOM"],
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "types": ["node", "@vercel/node"]
   },
-  "include": ["src"]
+  "include": ["api"]
 }
