--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/core": "^8.3.7",
     "@mantine/hooks": "^8.3.7",
     "@mantine/notifications": "^8.3.7",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
